buildscript {
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("io.spring.javaformat:spring-javaformat-gradle-plugin:${javaformatVersion}")
	}
}

plugins {
	id 'org.springframework.boot' version '2.7.5'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'java'
}

apply plugin: 'io.spring.javaformat'
apply plugin: 'checkstyle'

group = 'io.spring.project-api'
version = "1.0.0-SNAPSHOT"
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

checkstyle {
	toolVersion = "10.5.0"
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation 'org.springframework.boot:spring-boot-starter-graphql'
	implementation 'com.azure.spring:spring-cloud-azure-starter-keyvault-secrets'
	implementation 'com.contentful.java:cma-sdk:3.4.5'
	testImplementation 'com.squareup.okhttp3:mockwebserver'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.graphql:spring-graphql-test'
	testImplementation 'org.springframework.security:spring-security-test'
	checkstyle("io.spring.javaformat:spring-javaformat-checkstyle:${javaformatVersion}")
}

dependencyManagement {
	imports {
		mavenBom "com.azure.spring:spring-cloud-azure-dependencies:4.5.0"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
